# microsoft-authentication-extensions-for-python

./: .gitignore  .pylintrc  .travis.yml  Dockerfile  README.md  azure-pipelines.yml  docker_run.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
msal_extensions/: __init__.py  _cache_lock.py  _windows.py  cache_lock.py  libsecret.py  osx.py  persistence.py  token_cache.py  token_provider.py  windows.py
sample/: persistence_sample.py  token_cache_sample.py
tests/: cache_file_generator.py  http_client.py  lock_acquire.py  test_agnostic_backend.py  test_cache_lock_file_perf.py  test_crossplatlock.py  test_macos_backend.py  test_osx_token_cache.py  test_persistence.py  test_token_provider.py  test_windows_backend.py
