# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[bdist_wheel]
universal=1

[metadata]
license = MIT
project_urls =    Changelog = https://github.com/AzureAD/microsoft-authentication-extensions-for-python/releases
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
